[package]
name = "autobahnkreuz"
version = "0.1.0"
authors = ["Dudochkin Victor <dudochkin.victor@gmail.com>", "Daniel Yule <yule@cs.dal.ca>", "Fin Christensen <christensen.fin@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/verkehrsministerium/autobahnkreuz-rs"
documentation = "https://github.com/verkehrsministerium/autobahnkreuz-rs"
homepage = "https://github.com/verkehrsministerium/autobahnkreuz-rs"
description = "A WAMPv2 client and router implenting the basic WAMP profile"
keywords = ["rpc", "pubsub", "wamp", "wamp2"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]
edition = "2018"

[lib]
name = "autobahnkreuz"
path = "src/lib.rs"

[dependencies]
failure = { version = "~0", features = ["backtrace"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.7"
log = "0.4"
env_logger = "~0"
ws = "0.7"
rmp = "0.8"
rmp-serde = "0.13"
rand = "0.5.0-pre.1"
eventual = "0.1.7"
itertools = "0.7"
argparse = "0.2.1"
simple-raft-node = { git = "https://github.com/fin-ger/simple-raft-node.git" }
futures-preview = "0.3.0-alpha.16"
regex = "~1"
ctrlc = { version = "~3", features = ["termination"] }

[features]
default = []
ssl = ["ws/ssl"]
